# image-switcher

./: .gitignore  README.md  flake.nix  meson.build  org.ublue.ImageSwitcher.json
.flatpak-builder/cache/refs/heads/x86_64-org.ublue.ImageSwitcher.json/: init
.flatpak-builder/checksums/: x86_64-org.ublue.ImageSwitcher.json
data/: meson.build  org.ublue.ImageSwitcher.desktop.in  org.ublue.ImageSwitcher.gschema.xml  org.ublue.ImageSwitcher.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  ublue-image-switcher.gresource.xml  ublue-image-switcher.in  window.py  window.ui
